<resources>
    <string name="app_name">Eiga</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="tab_list">LIST</string>
    <string name="tab_fav">FAVORITES</string>
    <string name="tab_notif">NOTIFICATION</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="trending">Trending</string>
    <string name="most_popular">Most Popular</string>
    <string name="listposter">listPoster</string>
    <string name="img_detail_poster">img_detail_poster</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="detail_title">Information</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="search_mov">Search Movie from API</string>
    <string name="search_tv">Search TV from API</string>
    <string name="search_result_poster">Search result poster</string>
    <string name="search">Search</string>
    <string name="fav_poster">fav_poster</string>
    <string name="favorite_false">favorite_false</string>
    <string name="favorite_true">favorite_true</string>
    <string name="add_fav">Added to Favorites</string>
    <string name="remove_fav">Removed from Favorites</string>
    <string name="search_fav_mov">Search Your Favorite Movies</string>
    <string name="search_fav_tv">Search Your Favorite TV Shows</string>
    <string name="release_reminder_tag">Release Reminder</string>
    <string name="release_reminder_desc">Reminder for today\'s released movie</string>
    <string name="daily_reminder_tag">Daily Reminder</string>
    <string name="daily_reminder_desc">Daily reminder to open the app</string>
    <string name="daily_reminder_setup_msg">Daily reminder set up</string>
    <string name="daily_notif_title">Daily Reminder</string>
    <string name="daily_notif_message">Do not forget to check Eiga today!</string>
    <string name="daily_reminder_off_msg">Daily reminder set off</string>
    <string name="release_reminder_setup_msg">Release reminder set on</string>
    <string name="release_reminder_off_msg">Release reminder set off</string>
    <string name="release_reminder_title">Today released film</string>
    <string name="widget_image">widget_image</string>
</resources>
