<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <ScrollView
        android:id="@+id/sv_content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_detail_poster"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_detail_title_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_title_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_tag"
                tools:text="Marvel Studios' Captain Marvel" />

            <TextView
                android:id="@+id/tv_detail_release_date_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/release_date"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_value" />

            <TextView
                android:id="@+id/tv_detail_release_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date_tag"
                tools:text="July 31, 1999" />

            <TextView
                android:id="@+id/tv_detail_genre_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/genre"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date_value" />

            <TextView
                android:id="@+id/tv_detail_genre_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre_tag"
                tools:text="Adventure, Superhero" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_detail_genre_value,img_detail_poster"
                tools:layout_editor_absoluteY="214dp" />

            <TextView
                android:id="@+id/tv_detail_rating_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier" />

            <TextView
                android:id="@+id/tv_detail_language_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/language"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/barrier" />

            <TextView
                android:id="@+id/tv_detail_popularity_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/popularity"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/barrier" />

            <TextView
                android:id="@+id/tv_detail_rating_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_language_tag"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_rating_tag"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_rating_tag"
                tools:text="7.4" />

            <TextView
                android:id="@+id/tv_detail_language_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_language_tag"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_language_tag"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_language_tag"
                tools:text="En" />

            <TextView
                android:id="@+id/tv_detail_popularity_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_popularity_tag"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_popularity_tag"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_popularity_tag"
                tools:text="123.456" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_detail_rating_value,tv_detail_language_value,tv_detail_popularity_value"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/tv_detail_overview_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrier3" />

            <TextView
                android:id="@+id/tv_detail_overview_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview_tag"
                tools:text="@tools:sample/lorem/random" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>